--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -2,7 +2,7 @@
     <nav>
         <div class="nav__blanco">
             <img src="" alt="">
-            <h1>FLEX!</h1>
+            <h1>FLEX</h1>
         </div>
          <div class="nav__amarillo">
             <ul>
