--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -9,6 +9,26 @@
                 <li><a routerLink="/">Home</a></li>
                 <li><a routerLink="/prendas">Productos</a></li>
                 <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
+                <li><a routerLink="gestion">Gestion</a></li>
             </ul>
         </div>
     </nav>
