--- a/shopeame/src/app/pages/home/home.component.html
+++ b/shopeame/src/app/pages/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+
+<div class="outerBox">
+    <h2>Bienvenido a FLEX</h2>
+    <div>
+        <h3>¿Qué es <span>FLEX</span></h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis soluta iure tempora nulla, ducimus nihil quo ut dicta. Molestias quia animi placeat eum inventore est labore? Fuga perspiciatis dolores minima.
+        Fugiat hic saepe qui eaque ducimus ipsum praesentium corporis accusamus optio sapiente. Minus sed quo repellendus magni, voluptatem alias temporibus necessitatibus eos aperiam, ratione tempora aliquid, nemo dolore. Nisi, animi!
+        Dolorem officia ea rem dolores voluptas saepe cum incidunt inventore numquam harum sunt quasi repellat necessitatibus minus, adipisci quod eveniet suscipit. Quae, ab magni quas deserunt nulla laboriosam esse blanditiis?
+        Ipsum fugit commodi repudiandae quam maxime recusandae cumque molestias autem expedita voluptatibus corporis facilis, natus temporibus suscipit amet culpa laborum rerum voluptatem necessitatibus. Est vel eum impedit, vero molestiae itaque?</p>
+    </div>
+    <div>
+        <h3>¿Para que puedo usar <span>FLEX</span></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident commodi molestias reiciendis. Voluptas, quisquam laboriosam eligendi illo ex modi porro suscipit excepturi eum quod, hic eius earum quo fugiat. Consequatur.
+        Voluptas ad repellendus maiores eius facere quibusdam vitae odit impedit doloribus provident. Magnam perspiciatis aperiam quisquam est! Impedit quis officia praesentium earum eveniet! Odio, voluptates! Debitis officia magni dolorum perferendis.
+        Praesentium tempora temporibus doloremque consequuntur, iusto debitis corrupti repellat maxime est quis quia nisi magnam optio blanditiis quasi facilis minima consequatur labore aliquid ea. Blanditiis quam vitae eius dicta provident.</p>
+    </div>
+    <div>
+        <h3>¿Quiénes hacemos en <span>FLEX</span></h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nulla, quis voluptas, tempora debitis facilis porro quae ex iste quisquam quas praesentium autem nemo atque exercitationem eos fugiat laborum veritatis!
+        Error nisi dignissimos quos! Expedita illum repellat molestias ipsa accusantium dolorum soluta cum magnam distinctio tempora esse perferendis provident, quaerat veniam, ipsum quia. Commodi eligendi sint aut deserunt porro assumenda!
+        Nisi reiciendis possimus iusto? Excepturi quia nemo consequuntur molestias rem quos mollitia magni sint, veniam, hic aut distinctio ut expedita voluptas dolorem, placeat eum libero incidunt error similique sed non.</p>
+    </div>
+    <div>
+        <h3>¿Es seguro usar <span>FLEX</span></h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis at, maxime doloribus repudiandae delectus voluptates esse consectetur neque quas. Reiciendis dolore laboriosam necessitatibus beatae corrupti delectus eos odit! Libero, veniam.
+        At inventore consequuntur, exercitationem sapiente eveniet quisquam quam temporibus, perspiciatis, dolorem eligendi pariatur ut odio excepturi repellat quibusdam voluptatibus voluptates nesciunt beatae quo sint rerum sed! Quod eum blanditiis commodi.
+        Aliquid illum vel obcaecati dolore neque inventore modi cupiditate debitis natus, nemo aperiam? Perferendis, veniam similique quasi architecto fugit sunt ipsam incidunt ad, esse voluptatum quidem, fuga aperiam nihil dolorem!</p>
+    </div>
+</div>
