--- a/shopeame/src/app/core/footer/footer.component.html
+++ b/shopeame/src/app/core/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<footer>
+    <div>
+        <div class="">
+            <span>Síguenos en:</span>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">Twitter</a> |</li>
+                <li><a href="">Facebook</a> |</li>
+                <li><a href="">Instagram</a> |</li>
+                <li><a href="">TikTok</a> |</li>
+            </ul>
+        </div>
+        <div>
+            
+        </div>
+    </div>
+</footer>
