--- a/shopeame/src/styles.scss
+++ b/shopeame/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    list-style: none;
+    text-decoration: none;
+}
+
+body {
+    margin: 25px ;
+    justify-content: center;
+    background-color: #EEEEEE;
+}
