--- a/shopeame/src/app/core/footer/footer.component.html
+++ b/shopeame/src/app/core/footer/footer.component.html
@@ -5,14 +5,14 @@
         </div>
         <div>
             <ul>
-                <li><a href="">Twitter</a> |</li>
-                <li><a href="">Facebook</a> |</li>
-                <li><a href="">Instagram</a> |</li>
-                <li><a href="">TikTok</a> |</li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">TikTok</a></li>
             </ul>
         </div>
         <div>
-            
+            Copyright FLEX © 2023
         </div>
     </div>
 </footer>
