--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -7,7 +7,7 @@
          <div class="nav__amarillo">
             <ul>
                 <li><a routerLink="/">Home</a></li>
-                <li><a routerLink="/prendas">Productos</a></li>
+                <li><a routerLink="/productos">Productos</a></li>
                 <li><a routerLink="gestion">Gestion</a></li>
             </ul>
         </div>
