--- a/shopeame/src/app/core/footer/footer.component.html
+++ b/shopeame/src/app/core/footer/footer.component.html
@@ -1,14 +1,14 @@
 <footer>
     <div>
-        <div class="">
+        <div class="div">
             <span>Síguenos en:</span>
         </div>
         <div>
             <ul>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">TikTok</a></li>
+                <li><a href="https://twitter.com">Twitter </a> | </li> 
+                <li><a href="https://facebook.com">Facebook </a>| </li>
+                <li><a href="https://instagram.com">Instagram </a> | </li>
+                <li><a href="https://tiktok.com">TikTok</a></li>
             </ul>
         </div>
         <div>
