--- a/shopeame/src/app/core/footer/footer.component.scss
+++ b/shopeame/src/app/core/footer/footer.component.scss
@@ -1,15 +1,31 @@
 footer {
+    margin-top: 30px;
+    padding: 15px;
     background-color: #333333;
     text-align: center;
     color: white;
+    -webkit-box-shadow: -6px 3px 23px -8px rgba(122, 122, 122, 1);
+    -moz-box-shadow: -6px 3px 23px -8px rgba(122, 122, 122, 1);
+    box-shadow: -6px 3px 23px -8px rgba(122, 122, 122, 1);
 
-    ul li {
-        display: flex;
-        flex-direction: row;
+    ul{
+        
+        display: flex; 
+        justify-content: center;
+       
+        a {
+            color: white;
+            transition: all 0.3s ease-in-out;
+          
+            &:hover {
+              color: #fff;
+              text-shadow: 0px 0px 10px #fff;
+              transition: all 0.3s ease-in-out;
+            }
+          }
+          
     }
 
-    a {
-        color: white;
-    }
+   
 
 }
