--- a/shopeame/src/app/core/footer/footer.component.html
+++ b/shopeame/src/app/core/footer/footer.component.html
@@ -5,9 +5,9 @@
         </div>
         <div>
             <ul>
-                <li><a href="https://twitter.com">Twitter </a> | </li> 
-                <li><a href="https://facebook.com">Facebook </a>| </li>
-                <li><a href="https://instagram.com">Instagram </a> | </li>
+                <li><a href="https://twitter.com">Twitter</a></li> 
+                <li><a href="https://facebook.com">Facebook</a></li>
+                <li><a href="https://instagram.com">Instagram</a></li>
                 <li><a href="https://tiktok.com">TikTok</a></li>
             </ul>
         </div>
