--- a/shopeame/src/app/core/footer/footer.component.scss
+++ b/shopeame/src/app/core/footer/footer.component.scss
@@ -12,6 +12,7 @@ footer {
         
         display: flex; 
         justify-content: center;
+        gap: 15px;
        
         a {
             color: white;
