--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -6,8 +6,8 @@
             </div>
             <div class="nav_izq_ul">
                 <ul>
-                    <li><a routerLink="/">Home</a></li>
-                    <li><a routerLink="/prendas">Productos</a></li>
+                    <li><a routerLink="">Home</a></li>
+                    <li><a routerLink="productos">Productos</a></li>
                     <li><a routerLink="gestion">Gestion</a></li>
                 </ul>
             </div>
