--- a/shopeame/src/app/pages/prendas/prendas.component.html
+++ b/shopeame/src/app/pages/prendas/prendas.component.html
@@ -1,15 +1,30 @@
 <div class="products">
+
+  <div class="products_title">
+    <h3>Total Productos ({{ listaPrendas.length }})</h3>
+  </div>
+
+  <div class="products_list">
     <ul>
-        <h3>Total Productos({{ listaPrendas.length }})</h3>
-     <div class="products_product">
-         <li *ngFor="let prenda of listaPrendas">
-             <h3>{{ prenda.id }}</h3>
-             <h4>{{ prenda.nombre }}</h4>
-             <img src="{{ prenda.imagen }}" alt="{{ prenda.nombre }}" />
-             <small>{{ prenda.precio }} €</small>
-             <small>{{ prenda.descripcion }}</small>
-             <small>{{ prenda.stock }}</small>
-         </li>
-     </div>
+      <li *ngFor="let prenda of listaPrendas">
+        <h3>{{ prenda.id }}</h3>
+
+        <h4>{{ prenda.nombre }}</h4>
+
+        <img src="{{ prenda.imagen }}" alt="{{ prenda.nombre }}" />
+
+        <p>{{ prenda.precio }} €</p>
+
+        <p>{{ prenda.descripcion }}</p>
+
+        <p>Quedan {{ prenda.stock }} articulos</p>
+
+        <div class="products_product_btn">
+            <button routerLink="products/{{ prenda.id }}">Ver mas</button>
+        </div>
+
+      </li>
     </ul>
+  </div>
+
 </div>
