--- a/shopeame/src/app/core/footer/footer.component.html
+++ b/shopeame/src/app/core/footer/footer.component.html
@@ -6,9 +6,13 @@
         <div>
             <ul>
                 <li><a href="https://twitter.com">Twitter</a></li> 
+                <img src="../../../assets/images/icons8-facebook.gif" alt="">
                 <li><a href="https://facebook.com">Facebook</a></li>
+                <img src="../../../assets/images/icons8-facebook.gif" alt="">
                 <li><a href="https://instagram.com">Instagram</a></li>
+                <img src="../../../assets/images/icons8-facebook.gif" alt="">
                 <li><a href="https://tiktok.com">TikTok</a></li>
+                <img src="../../../assets/images/icons8-facebook.gif" alt="">
             </ul>
         </div>
         <div>
