--- a/shopeame/src/app/core/nav/nav.component.scss
+++ b/shopeame/src/app/core/nav/nav.component.scss
@@ -1,35 +1,45 @@
 nav {
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-.nav_izq{
-     
+  padding: 20px;
+  margin-bottom: 60px;
+  display: flex;
+  justify-content: space-between;
+
+  .nav_izq {
+    position: relative;
+
     img {
-        
-        width: 200px;
-        border: 10px solid #000000;
-        border-radius: 50%;  
-    } 
-    .nav_izq_ul {   
-        ul{
-            margin-top: 80px;
-            
-            display: flex;
-            li:hover {
-                
-                font-weight: bold;
-                color: #007bff;
-                transition: all 0.3s ease-in-out;
-              } a{
-                margin-left: 30px;
-              }  
-        }   
-    }    
+      width: 300px;
+      border: 10px solid #000000;
+      border-radius: 50%;
+      position: absolute;
+      top: 57%;
+      left: 920px;
+      transform: translate(-50%, -50%);
+    }
+
+    .nav_izq_ul {
+      ul {
+        margin-top: 120px;
+        display: flex;
+
+        li:hover {
+          font-weight: bold;
+          transition: all 0.3s ease-in-out;
+        }
+
+        a {
+          color: #0a0a0a;
+          font-size: 20px;
+          margin-left: 30px;
+        }
+      }
+    }
+  }
 }
+
 .nav_dcha{
-    margin-right: 30px;
-    margin-top: 80px;
+    margin-right: 50px;
+    margin-top: 90px;
     img {
         cursor: pointer;
         width: 20px;
