--- a/shopeame/src/app/pages/prendas/prendas.component.html
+++ b/shopeame/src/app/pages/prendas/prendas.component.html
@@ -22,7 +22,7 @@
         <div class="products_product_btn">
             <button routerLink="products/{{ prenda.id }}">Ver mas</button>
         </div>
-
+        <h2>Hola</h2>
       </li>
     </ul>
   </div>
