--- a/shopeame/src/styles.scss
+++ b/shopeame/src/styles.scss
@@ -5,6 +5,8 @@
     list-style: none;
     text-decoration: none;
     font-family: 'Gantari', sans-serif;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
