--- a/shopeame/src/app/pages/prendas/prendas.component.scss
+++ b/shopeame/src/app/pages/prendas/prendas.component.scss
@@ -46,6 +46,7 @@
 //   }
 // }
 ul {
+  
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -53,6 +54,7 @@ ul {
   align-content: space-between;
 
   li {
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
