forms de login y registro

--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -14,8 +14,9 @@
 
         </div>
         <div class="nav_dcha">
-            <img src="../../../assets/images/usuario.png" alt="usuario">
+            <img routerLink="login" src="../../../assets/images/usuario.png" alt="usuario" >
             <img src="../../../assets/images/configuraciones.png" alt="configuraciones">
+            <img routerLink="registro" src="../../../assets/images/usuario.png" alt="usuario" >
         </div>
     </nav>
 </header>
