--- a/shopeame/src/app/core/footer/footer.component.html
+++ b/shopeame/src/app/core/footer/footer.component.html
@@ -1,22 +1,33 @@
 <footer>
-    <div>
-        <div class="div">
-            <span>Síguenos en:</span>
-        </div>
-        <div>
-            <ul>
-                <li><a href="https://twitter.com">Twitter</a></li> 
-                <img src="../../../assets/images/icons8-facebook.gif" alt="">
-                <li><a href="https://facebook.com">Facebook</a></li>
-                <img src="../../../assets/images/icons8-facebook.gif" alt="">
-                <li><a href="https://instagram.com">Instagram</a></li>
-                <img src="../../../assets/images/icons8-facebook.gif" alt="">
-                <li><a href="https://tiktok.com">TikTok</a></li>
-                <img src="../../../assets/images/icons8-facebook.gif" alt="">
-            </ul>
-        </div>
-        <div>
-            Copyright FLEX © 2023
-        </div>
+    <div class="line_1">
+      <h4>Síguenos en:</h4>
     </div>
+    <ul>
+      <li>
+        <div class="line_2">
+          <a href="https://twitter.com">Twitter</a>
+          <img src="./assets/images/twitter.svg" alt="" />
+        </div>
+      </li>
+      <li>
+        <div class="line_2">
+          <a href="https://www.facebook.com/">Facebook</a>
+          <img src="./assets/images/facebook.svg" alt="" />
+        </div>
+      </li>
+      <li>
+        <div class="line_2">
+          <a href="https://instagram.com">Instagram</a>
+          <img src="./assets/images/instagram.svg" alt="" />
+        </div>
+      </li>
+      <li>
+        <div class="line_2">
+          <a href="https://tiktok.com">TikTok</a>
+          <img src="./assets/images/tik-tok.svg" alt="" />
+        </div>
+      </li>
+    </ul>
+
+    <h4>Copyright FLEX © 2023</h4>
 </footer>
