--- a/shopeame/src/app/core/footer/footer.component.scss
+++ b/shopeame/src/app/core/footer/footer.component.scss
@@ -1,33 +1,44 @@
 footer {
-    margin-top: 30px;
-    padding: 15px;
-    background-color: #333333;
-    text-align: center;
-    color: white;
-    border-radius: 2px;
-    -webkit-box-shadow: inset -14px -11px 39px -9px rgba(168, 168, 168, 1);
-    -moz-box-shadow: inset -14px -11px 39px -9px rgba(168, 168, 168, 1);
-    box-shadow:  -14px -11px 39px -9px rgba(168, 168, 168, 1);
+  margin-top: 30px;
+  padding: 15px;
+  position: absolute;
+  width:100%;
+  bottom: 0px ;
+  max-height: fit-content;
+  background-color: #333333;
+  text-align: center;
+  color: white;
+  border-radius: 2px;
+  -webkit-box-shadow: inset -14px -11px 39px -9px rgba(168, 168, 168, 1);
+  -moz-box-shadow: inset -14px -11px 39px -9px rgba(168, 168, 168, 1);
+  box-shadow: -14px -11px 39px -9px rgba(168, 168, 168, 1);
 
-    ul{
-        
-        display: flex; 
-        justify-content: center;
-        gap: 15px;
-       
-        a {
-            color: white;
-            transition: all 0.3s ease-in-out;
-          
-            &:hover {
-              color: #fff;
-              text-shadow: 0px 0px 10px #fff;
-              transition: all 0.3s ease-in-out;
-            }
+
+    ul {
+      display: flex;
+      gap: 20px ;
+      justify-content: center;
+      margin-top: 10px;
+      margin-bottom: 10px;
+
+        .line_2{
+          display: flex !important;
+          gap: 5px;
+          width: fit-content;
+          height: fit-content;
+          img {
+            width:25px;
           }
-          
+      }
     }
+    a {
+      color: white;
+      transition: all 0.3s ease-in-out;
 
-   
-
-}
+      &:hover {
+        color: #fff;
+        text-shadow: 0px 0px 10px #fff;
+        transition: all 0.3s ease-in-out;
+      }
+    }
+  }
