--- a/shopeame/src/app/core/nav/nav.component.scss
+++ b/shopeame/src/app/core/nav/nav.component.scss
@@ -57,18 +57,32 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items:center;
-  margin-left: 25px;
-  margin-right: 25px;
-  .nav_izq_ul ul {
+  align-items: center;
+  margin-top: 25px;
+
+
+ .nav_izq_ul ul {
     display: flex;
     gap: 25px;
+    margin-left: 25px;
+
+    li:hover {
+     
+      font-weight: bold;
+      transition: all 0.3s ease-in-out;
+    }
+
+    a {
+      color: #0a0a0a;
+      font-size: 20px;
+    }
   }
+
   .nav_img {
     width: 200px;
     border: 5px solid #000000;
     border-radius: 50px;
-    
+
     img {
       width: 200px;
     }
@@ -79,13 +93,13 @@ nav {
     .nav_dcha_img1 {
       width: 70px;
       height: 70px;
-      cursor: pointer
+      cursor: pointer;
     }
     .nav_dcha_img1 img {
       width: 40px;
       height: 40px;
       transition: all 0.3s ease-in-out;
-      border-radius:200px ;
+      border-radius: 200px;
       &:hover {
         transform: scale(1.05);
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -96,7 +110,7 @@ nav {
       width: 40px;
       height: 40px;
       transition: all 0.3s ease-in-out;
-      border-radius:200px ;
+      border-radius: 200px;
       &:hover {
         transform: scale(1.05);
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -106,7 +120,7 @@ nav {
     .nav_dcha_img2 {
       width: 70px;
       height: 70px;
-      cursor: pointer
+      cursor: pointer;
     }
   }
 }
