--- a/shopeame/src/app/pages/gestion/gestion.component.html
+++ b/shopeame/src/app/pages/gestion/gestion.component.html
@@ -1,1 +1,7 @@
-<p>gestion works!</p>
+<form>
+    <input formControlName="nombre" placeholder="Nombre">
+    <input formControlName="descripcion" placeholder="Descripcion">
+    <input formControlName="imagen" placeholder="Imagen">
+    <input formControlName="precio" placeholder="Precio">
+    <input formControlName="stock" placeholder="Stock">
+</form>
