--- a/shopeame/src/app/components/login-form/login-form.component.html
+++ b/shopeame/src/app/components/login-form/login-form.component.html
@@ -5,7 +5,7 @@
         <legend>Datos de Acceso</legend>
         <div>
             <label for="">Email</label>
-            <input type="email" name="email" placeholder="Escribe tu mail">
+            <input type="email" name="email" placeholder="Escribe tu mail " formControlName="email">
         </div>
         <div>
             <label for="">Contraseña</label>
