--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -15,17 +15,14 @@
     <div class="nav_dcha">
 
 
-            <div class="nav_dcha_img1">
-                <img  src="../../../assets/images/usuario.png" alt="usuario" />
-            </div>
+      <div class="nav_dcha_img1">
+        <img src="../../../assets/images/usuario.png" routerLink="login" alt="usuario" />
+      </div>
 
 
       <div class="nav_dcha_img2">
-          <img
-            src="../../../assets/images/configuraciones.png"
-            alt="configuraciones"
-          />
-    </div>
+        <img src="../../../assets/images/configuraciones.png" alt="configuraciones" />
+      </div>
 
     </div>
   </nav>
