--- a/shopeame/src/app/pages/prendas/prendas.component.html
+++ b/shopeame/src/app/pages/prendas/prendas.component.html
@@ -20,7 +20,7 @@
         <p>Quedan {{ prenda.stock }} articulos</p>
 
         <div class="products_product_btn">
-            <button routerLink="products/{{ prenda.id }}">Ver mas</button>
+            <button routerLink="/productos/{{ prenda.id }}">Ver mas</button>
         </div>
       </li>
     </ul>
