--- a/shopeame/src/app/components/producto/producto.component.html
+++ b/shopeame/src/app/components/producto/producto.component.html
@@ -1,1 +1,20 @@
-<p>producto works!</p>
+<div class="producto">
+    <div>
+      <ul>
+        <li>
+          <h3>{{ producto.id }}</h3>
+  
+          <h4>{{ producto.nombre }}</h4>
+  
+          <img src="{{ producto.imagen }}" alt="{{ producto.nombre }}" />
+  
+          <p>{{ producto.precio }} €</p>
+  
+          <p>{{ producto.descripcion }}</p>
+  
+          <p>Quedan {{ producto.stock }} articulos</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
