--- a/shopeame/src/app/components/login-form/login-form.component.html
+++ b/shopeame/src/app/components/login-form/login-form.component.html
@@ -18,6 +18,10 @@
                 La contraseña tiene que tener al menos 8 caracteres
             </div>
         </div>
+        <div>
+            <label for="">Si aún no estas registrado, registrte en el siguiente enlace: </label>
+            <a routerLink="/registro">Registrate aqui ! </a>
+        </div>
     </fieldset>
 
     <button [disabled]="!loginForm.valid" type="submit">Acceder</button>
