--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -16,7 +16,7 @@
 
 
       <div class="nav_dcha_img1" *ngIf="!hayUser" [routerLink]="'login'">
-        <img src="./assets/images/usuario.png" routerLink="login" alt="usuario" />
+        <img src="./assets/images/usuario.png" routerLink="login#" alt="usuario" />
       </div>
 
 
