navbar img arreglado y login mejorado

--- a/shopeame/src/app/components/login-form/login-form.component.scss
+++ b/shopeame/src/app/components/login-form/login-form.component.scss
@@ -236,7 +236,7 @@ input {
 }
 
 .overlay {
-//   background-image: url('image/image.gif');
+  background-image: url("https://media.giphy.com/media/l378aUIDVRapQXXfG/giphy.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
